2003-02-14	Joel Sherrill <joel@OARcorp.com>

	* cpumodels.t: Removed a29k reference and updated.

2003-02-11	Joel Sherrill <joel@OARcorp.com>

	* interrupts.t: Rework logic that decides when to call
	_Thread_Dispatch.  Analysis by Sergei Organov <osv@javad.ru>
	determined that _ISR_Signals_to_thread_executing was not being
	honored and/or cleared properly.

2003-01-25	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* porting.texi: Set @setfilename porting.info.

2003-01-24	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Put GENERATED_FILES into $builddir.

2003-01-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* version.texi: Remove from CVS.
	* stamp-vti: Remove from CVS.
	* .cvsignore: Add version.texi.
	Add stamp-vti.
	Re-sort.

2003-01-21	Joel Sherrill <joel@OARcorp.com>

	* stamp-vti, version.texi: Regenerated.

2002-11-13	Joel Sherrill <joel@OARcorp.com>

	* stamp-vti, version.texi: Regenerated.

2002-10-24	Joel Sherrill <joel@OARcorp.com>

	* stamp-vti, version.texi: Regenerated.

2002-08-01	Joel Sherrill <joel@OARcorp.com>

	* stamp-vti, version.texi: Regenerated.

2002-07-30	Joel Sherrill <joel@OARcorp.com>

	* miscellaneous.t: Added some markups for fonts and clarified
	some places.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Remove AUTOMAKE_OPTIONS.

2002-01-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: include main.am, require automake-1.5.

2001-01-17	Joel Sherrill <joel@OARcorp.com>

	* .cvsignore: Added rtems_header.html and rtems_footer.html.

2000-08-10	Joel Sherrill <joel@OARcorp.com>

	* ChangeLog: New file.