@@ -1,3 +1,8 @@
+2003-08-22	Joel Sherrill <joel@OARcorp.com>
+
+	* cpumodels.t, sourcecode.t: Reconcile differences between CVS trunk
+	and 4.6 branch.
+
 2003-02-14	Joel Sherrill <joel@OARcorp.com>
 
 	* cpumodels.t: Removed a29k reference and updated.
